<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bnviewpager.viewpageriteminbnv.View.FragmentKedua"
    android:background="#A3E251">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/splash"
            android:layout_marginTop="88dp"
            android:text="@string/third_frag_title"
            android:textSize="36sp" />

        <ImageView
        android:id="@+id/icon1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Title"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        app:srcCompat="@drawable/ic_phone"
        android:contentDescription="TODO"
        />

        <TextView
            android:id="@+id/txt_telepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/splash"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="63dp"
            android:layout_below="@+id/Title"
            android:layout_toRightOf="@+id/icon1"
            android:text="@string/telepon"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/icon1"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="50dp"
            app:srcCompat="@drawable/ic_email"
            android:contentDescription="TODO"
            />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon1"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/splash"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/icon2"
            android:text="@string/email"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/buttonfb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/icon2"
            android:layout_marginTop="41dp"
            android:background="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:src="@mipmap/fbook"
            android:elevation="5dp"
            />

    </RelativeLayout>
</FrameLayout>
